part-3/exercise-3.02/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-ping-dep
  namespace: log-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-ping
  template:
    metadata:
      labels:
        app: log-ping
    spec:
      containers:
        - name: log-output
          image: lofmakim/log-output:v3.2
          volumeMounts:
            - name: config-volume
              mountPath: '/usr/src/app/config'
        - name: pingpong-app
          image: lofmakim/pingpong-app:v3.2.3
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config
