part-3/exercise-3.02/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-ping-svc
  namespace: log-test
spec:
  type: NodePort
  selector:
    app: log-ping
  ports:
    - port: 2345
      name: log-output
      protocol: TCP
      targetPort: 3000
    - port: 2346
      name: pingpong-app
      protocol: TCP
      targetPort: 3001
